<resources>
    <string name="app_name">InspiredMead</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mead_list">Inspired Mead</string>
    <string name="title_activity_meads">Meads</string>

    <string name="title_activity_mead">Inspired Mead</string>
    <string name="add_mead_button">Add Mead</string>
    <string name="action_add">Add</string>
    <string name="sGravity">Specific Gravity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="curVolume">Current Volume</string>
    <string name="tankCapacity">Tank Capacity</string>
    <string name="meadName">Mead Name</string>
    <string name="action_back">Back</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_add">Rev. Sort</string>
    <string name="waste">Waste</string>
    <string name="add_honey">Add Honey</string>
    <string name="add_addition">Add Other</string>
    <string name="amount">Amount</string>
    <string name="honeyName">Honey Name</string>
    <string name="Brix">Brix</string>
    <string name="description">Description</string>
    <string name="add_other">Add Other</string>
    <string name="additiveName">Additive</string>
    <string name="sg">Specific Gravity</string>
    <string name="mead_display_all">Display Empty</string>
    <string name="mead_display_full">No Empties</string>
</resources>

