<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MeadActivity">

       <android.support.design.widget.TextInputLayout
        android:id="@+id/sgLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/sg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sGravity"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sgLayout"
        android:layout_alignLeft="@+id/sgLayout"
        android:layout_alignStart="@+id/sgLayout"
        android:layout_marginTop="31dp"
        android:id="@+id/button_ok" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_ok"
        android:layout_alignRight="@+id/sgLayout"
        android:layout_alignEnd="@+id/sgLayout"
        android:id="@+id/button_cancel" />

</RelativeLayout>