<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MeadActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fd_wasteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/fd_waste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/waste"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fd_filterLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fd_wasteLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <Spinner
            android:id="@+id/fd_filter_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fd_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fd_wasteLayout"
        android:layout_alignStart="@+id/fd_wasteLayout"
        android:layout_below="@+id/fd_filterLayout"
        android:layout_marginTop="16dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/fd_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fd_button_ok"
        android:layout_alignEnd="@+id/fd_wasteLayout"
        android:layout_alignRight="@+id/fd_wasteLayout"
        android:text="@string/cancel" />

</RelativeLayout>